        Changes between published versions

0.7 to 0.8

- added option --precision to resample_soxr.

- added --replay-gain option to resample_soxr and volrace.

- fixed possible segfault of resample_soxr in rare
  cases of parameter combinations involving RACE.

- added experimental --stripped option for playhrt.

- added --skip option for 'writeloop' with input from a file.

- added --dsync option for 'bufhrt', to force fast writing to hardware.

- added utility 'resample_soxr' for highest quality resampling with
  64 bit operations (abilities of reading files as with 'cat64' and 
  filtering output as with 'volrace' are built into this program).

- added utility 'cat64' to translate audio file or shared memory to 
  raw 64 bit floating point samples.

- added option --max-bad-reads to 'playhrt' (program stops when given 
  number of input blocks was too small, the value 4 was hardcoded before)

- added option --force-shm to 'writeloop' (overwrites semaphores left
  over from other calls).

- now using 'memclean' in 'writeloop'.

- using additional register/variable for refreshing of memory. Causes
  again a surprising improvement of sound in my system.

- various improvements in wording of help texts and verbose messages.

- new options --no-buf-stats and --no-delay-stats and explanation of
  "delayed loops" in 'playhrt'.

- added --verbose option to 'shmcat', 'catloop', 'writeloop'
  and 'volrace'.

- introduced --sleep=Nus option to 'playhrt', to give input programs
  time for startup.

- corrected the arguments of 'shmcat' in two example scripts.

0.6 to 0.7

Comments for users of previous versions: Five main ideas went into this
release, each of these cause audible improvements in my setup:

(1) Use of the mmap interface in ALSA with playhrt. This reduces the
    copying of audio data and makes the patch of the ALSA library which
    was proposed in previous versions unnecessary. It may be necessary to